--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -152,7 +152,7 @@ import Layout from '../layouts/Layout.astro';
                     <ul>
                         <li><i class="fas fa-phone"></i> +234 123 456 7890</li>
                         <li><i class="fas fa-envelope"></i> info@khcglobalservices.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Ikeja, Lagos, Nigeria</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 4, Ayodele Diyan Street, Ikeja, Lagos, Nigeria</li>
                     </ul>
                 </div>
                 <form name="contact" method="POST" data-netlify="true" class="contact-form animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">
